--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "airwings",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.0.197:8000",
+
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.3",
     "@react-pdf/renderer": "^4.3.0",
